opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/avsm/duniverse"
doc: "https://avsm.github.io/duniverse/"
license: "ISC"
dev-repo: "https://github.com/avsm/duniverse.git"
bug-reports: "https://github.com/avsm/duniverse/issues"
tags: ["org:mirage" "org:ocamllabs"]
available: [ ocaml-version >= "4.05.0"]
depends: [
  "dune"
  "bos"
  "cmdliner"
  "fmt"
  "logs"
  "rresult"
  "opam-file-format"
  "uri"
  "ezjsonm"
  "opam-core"
  "alcotest" {test}
 ]
build: [
  ["dune" "subst" "-p" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
