opam-version: "2.0"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/duniverse"
doc: "https://avsm.github.io/duniverse/"
bug-reports: "https://github.com/avsm/duniverse/issues"
synopsis: "Prototype tool to build vendored Dune repositories"
depends: [
  "ocaml" {>= "4.05.0"} 
  "dune"
  "ppx_sexp_conv"
  "bos"
  "cmdliner"
  "fmt"
  "logs"
  "rresult"
  "opam-file-format"
  "uri"
  "ezjsonm"
  "opam-core"
  "alcotest" {with-test}
]
pin-depends: [
  ["dune.dev" "git+https://github.com/ocaml/dune.git"]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/avsm/duniverse.git"
