opam-version: "1.2"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org"]
homepage:     "https://github.com/realworldocaml/mdx"
license:      "ISC"
dev-repo:     "https://github.com/realworldocaml/mdx.git"
bug-reports:  "https://github.com/realworldocaml/mdx/issues"
doc:          "https://realworldocaml.github.io/mdx/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "fmt"
  "cppo"
  "astring"
  "logs"
  "cmdliner"
  "re" {>= "1.7.2"}
  "ppx_tools"
  "lwt" {test}
  "ocaml-migrate-parsetree" {>= "1.0.6"}
]

available: ["ocaml-version" >= "4.06.0"]
