(rule
 (targets duniverse.1)
 (action (with-stdout-to %{targets} (run ../src/duniverse.exe --help=plain))))

(rule
 (targets duniverse-status.1)
 (action (with-stdout-to %{targets} (run ../src/duniverse.exe status --help=plain))))

(executable
 (name gen_readme)
 (libraries bos rresult))

(rule
 (targets usage.md)
 (deps header.md duniverse.1 duniverse-status.1)
 (action (with-stdout-to %{targets} (run ./gen_readme.exe duniverse duniverse-status))))
