(rule
 (targets duniverse.1)
 (action
  (with-stdout-to
   %{targets}
   (run ../bin/duniverse.exe --help=plain))))

(executable
 (name gen_readme)
 (libraries bos fpath rresult))

(rule
 (targets usage.md)
 (deps header.md duniverse.1)
 (action
  (with-stdout-to
   %{targets}
   (run ./gen_readme.exe duniverse))))
