(library
 (name mdx)
 (public_name mdx)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (libraries astring bos.setup csexp fmt logs ocaml-version
   ocamlformat-rpc-lib odoc-parser re result sexplib0 str
   compiler-libs.common))

(ocamllex lexer_mdx)

(ocamllex lexer_cram)

(ocamllex lexer_top)
