opam-version: "2.0"
maintainer: "filliatr@lri.fr"
authors: [
  "Sylvain Conchon"
  "Jean-Christophe Filliâtre"
  "Julien Signoles"
]
homepage: "http://ocamlgraph.lri.fr/"
license: "GNU Library General Public License version 2.1"
doc: ["http://ocamlgraph.lri.fr/doc"]
dev-repo: "git+https://github.com/dune-universe/ocamlgraph.git"
bug-reports: "https://github.com/backtracking/ocamlgraph/issues"

tags: [
  "graph"
  "library"
  "algorithms"
  "directed graph"
  "vertice"
  "edge"
  "persistent"
  "imperative"
]
depends: [
  "dune"
  "ocaml"
]
depopts: [
  "lablgtk"
  "conf-gnomecanvas"
]
synopsis: "A generic graph library for OCaml"
build: [[ "dune" "build" "-p" name ]]
url {
  src: "git://github.com/dune-universe/ocamlgraph.git#duniverse-v1.8.8"
}
