version: "2.0.0"
opam-version: "2.0"
synopsis: "Displaying graphs using OCamlGraph and GTK"
description: "Displaying graphs using OCamlGraph and GTK"
maintainer: ["filliatr@lri.fr"]
authors: ["Sylvain Conchon" "Jean-Christophe Filliâtre" "Julien Signoles"]
license: "LGPL-2.1-only"
tags: [
  "graph"
  "library"
  "algorithms"
  "directed graph"
  "vertice"
  "edge"
  "persistent"
  "imperative"
]
homepage: "https://github.com/backtracking/ocamlgraph/"
bug-reports: "https://github.com/backtracking/ocamlgraph/issues/new"
depends: [
  "ocaml"
  "stdlib-shims"
  "lablgtk"
  "conf-gnomecanvas"
  "ocamlgraph"
  "dune" {>= "2.0"}
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/backtracking/ocamlgraph.git"