opam-version: "2.0"
version: "2.1.3"
synopsis: "Parser and printer for the opam file syntax"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
homepage: "https://opam.ocaml.org"
bug-reports: "https://github.com/ocaml/opam-file-format/issues"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
dev-repo: "git+https://github.com/ocaml/opam-file-format"
build: [
  [make "byte" {!ocaml:native} "all" {ocaml:native}] {!dune:installed}
  ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}] {dune:installed}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & dune:installed}
]
install: [make "install" "PREFIX=%{prefix}%"] {!dune:installed}
depends: [
  "ocaml"
  "alcotest" {with-test}
]
depopts: [
  "dune"
]
conflicts: "dune" {< "1.3.0"}
