opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
homepage: "https://erratique.ch/software/uuidm"
doc: "https://erratique.ch/software/uuidm/doc/Uuidm"
dev-repo: "git+https://erratique.ch/repos/uuidm.git"
bug-reports: "https://github.com/dbuenzli/uuidm/issues"
tags: [ "uuid" "codec" "org:erratique" ]
license: "ISC"
depends: [
  "ocaml" {>= "4.03.0"}
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build} ]
depopts: [ "cmdliner" ]
build:
[  "ocaml" "pkg/pkg.ml" "build"
           "--pinned" "%{pinned}%"
           "--with-cmdliner" "%{cmdliner:installed}%" ]