(rule
 (target ox.config)
 (action
  (with-accepted-exit-codes
   (or 0 2)
   (with-stdout-to
    %{target}
    (run %{ocamlopt} -config-var ox)))))

(rule
 (target cppo_flags)
 (action
  (with-stdout-to
   %{target}
   (run ocaml %{dep:gen_cppo_flags.ml} %{dep:ox.config}))))

(library
 (name mdx_top)
 (public_name mdx.top)
 (modes byte)
 (modules
  (:standard \ gen_cppo_flags))
 (preprocess
  (action
   (run
    %{bin:cppo}
    -V
    OCAML:%{ocaml_version}
    %{read-lines:cppo_flags}
    %{input-file})))
 (libraries
  unix
  mdx
  compiler-libs
  compiler-libs.toplevel
  threads
  findlib.top))
