(executable
 (name ed_main)
 (modules ed_main ed_display ed_graph ed_hyper ed_draw)
 (libraries graph lablgtk2 lablgtk2.gnomecanvas))

(executable
 (name editor)
 (modules editor gtree htree)
 (libraries graph lablgtk2 lablgtk2.gnomecanvas)
 (flags -w -32))

(executable
 (name graphEdGTK)
 (modules graphEdGTK outils_tort outils_math)
 (libraries graph lablgtk2 lablgtk2.gnomecanvas)
 (flags -w -32))

;; FIXME: graphEd cannot be built because tmoveto / tlineto don't exist (anymore ?)

; (executable
;   (name graphEd)
;   (modules graphEd outils_math outils_tort)
;   (libraries graph lablgtk2 lablgtk2.gnomecanvas))

;; This was commented in the old makefile that was here before :

; # tortuegpoint: tortue.ml 
; #	ocamlopt outils_math.ml
; #	ocamlopt -o $@ graphics.cmxa outils_math.cmx $^

; # graphEd.opt : outils_math.ml outils_tort.ml graphEd.ml
; # 	ocamlopt -o $@ graphics.cmxa -I .. ../graph.cmxa $^

; # graphEdGTK : outils_math.ml outils_tort.ml graphEdGTK.ml
; # 	ocamlopt.opt -o $@ -I +lablgtk2 lablgtk.cmxa lablgnomecanvas.cmxa unix.cmxa -I .. ../graph.cmxa $^

; # graphEdGTK.byte : outils_math.ml outils_tort.ml graphEdGTK.ml
; # 	ocamlc.opt -g -o $@ -I +lablgtk2 lablgtk.cma lablgnomecanvas.cma unix.cma -I .. ../graph.cma $^

; # editor.opt:
; # 	make -C .. 
