(executable
 (name test_diagnostics)
 (libraries opam-0install))

(rule
 (deps
  packages/main/main.1/opam
  packages/foo/foo.1/opam
  packages/foo/foo.2/opam)
 (action
  (with-stdout-to
   test_diagnostics.output
   (run ./test_diagnostics.exe packages))))

(rule
 (alias runtest)
 (package opam-0install)
 (action
  (diff test_diagnostics.expected test_diagnostics.output)))
