(executable
 (name expect_test)
 (link_flags (-linkall))
 (modes byte)
 (libraries unix compiler-libs.toplevel ppxlib ppxlib.metaquot ppxlib.traverse
            findlib.top
            ;; We don't actually use findlib.dynload, however it is a
            ;; special library that causes to record the various
            ;; libraries statically linked in with findlib so that
            ;; they are not loaded dynamically at runtime
            findlib.dynload ))

(ocamllex expect_lexer)
