(executable
  (name frontend)
  (package findlib)
  (public_name ocamlfind)
  (modules ocaml_args frontend)
  (flags (:standard -w -3-6-27-32-33-50))
  (libraries findlib unix))

(library
  (name findlib)
  (public_name findlib)
  (modules findlib fl_args fl_lint fl_package_base fl_metascanner
    fl_metatoken fl_split fl_meta fl_topo findlib_config)
  (flags (:standard -w -6-27-32-33-50))
  (wrapped false))

(library
  (name findlib_top)
  (public_name findlib.top)
  (wrapped false)
  (libraries findlib)
  (modules topfind)
  (flags (:standard -I +compiler-libs)))

(library
  (name findlib_dynload)
  (public_name findlib.dynload)
  (wrapped false)
  (libraries findlib)
  (modules fl_dynload))

(rule
  (copy topfind.ml.in topfind.ml))

(rule
  (targets findlib_config.ml)
  (action (with-stdout-to %{targets} 
    (run ../../tools/discover.exe))))

(rule
  (targets ocaml_args.ml)
  (action (run ../../tools/extract_args/extract_args.exe
           -o %{targets} ocamlc ocamlcp ocamloptp ocamlmklib
           ocamlmktop ocamlopt ocamldep ocamldoc)))

(ocamllex fl_meta)
